<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<resources>
    <!-- Nom de l'application -->
    <string name="app_name">LE MET\'</string>

    <string name="widget11_name">LE MET\' 1x1</string>
    <string name="widget21_name">LE MET\' 2x1</string>
    <string name="widget22_name">LE MET\' 2x2</string>
    <string name="widgetlowres_name">LE MET\' 2x2 LowRes</string>
    <!-- Messages -->
    <string name="titleTransportsMetz">Application LE MET\', version %1$s</string>
    <string name="majDispo">Une mise à jour des données LE MET\' est disponible, voulez-vous l\'effectuer maintenant?
        Attention, vous devrez charger à
        nouveau les horaires que vous avez déjà chargés.
    </string>
    <string name="infoChargementGtfs">Chargement des données LE MET\'.</string>
    <string name="dialogRequeteTwitter">Interrogation de Twitter.</string>
    <string name="dialogAPropos">LE MET\', préversion.
        Ce programme est diffusé sous licence GPL.
    </string>
    <string name="detailarret_empty">Pas de bus à la date sélectionnée, veuillez changer la date</string>
    <string name="itineraires_empty">Aucun itinéraire n\'a été trouvé pour ces adresses.</string>
    <string name="hint_rechercherarret">Recherche d\'arrêts</string>
    <string name="listfavori_empty">Aucun favori trouvé.</string>
    <string name="go_googlemap">Visualiser sur GoogleMap</string>
    <string name="textAdresseDepart">Départ</string>
    <string name="textAdresseArrivee">Destination</string>
    <string name="exempleAdresse">Ex : Place Saint Jacques, Metz</string>
    <string name="hint_rechercheParcRelai">Recherche de Parcs Relais</string>
    <string name="hint_recherchePointDeVente">Recherche de Points de vente</string>
    <string name="hint_rechercheStation">Recherche de stations</string>
    <string name="hint_positionCourante">Position courante</string>
    <string name="listevelofavoris_empty">Aucune station favorite trouvée.</string>
    <string name="directionEntete">Direction :</string>
    <string name="tooMuchFavoris">Déjà trois arrêts favoris sélectionnés</string>
    <string name="justOneFavori">Déjà un arrêt favori sélectionné</string>
    <string name="favoriUsedByWidget">Un widget utilise ce favori, merci de le supprimer avant de supprimer ce favori.
    </string>
    <string name="chargementLigneFavori">\nChargement de la ligne %1$s dont vous avez des favoris.</string>
    <string name="loadAllLineAlert">Attention, charger les données de toutes les lignes peut prendre plusieurs minutes
        et occupera environ 5Mo de données, mais vous permettra d\'accéder à tous les horaires de manière instantanée.
        Êtes-vous sûr de vouloir les charger?
    </string>
    <string name="geocodageAdresseDepart">Geo-codage de l\'adresse de départ</string>
    <string name="geocodageAdresseArrivee">Geo-codage de l\'adresse de destination</string>
    <string name="calculItineraire">Calcul des itinéraires possibles en cours.</string>
    <string name="depart">Départ à %1$s</string>
    <string name="arrivee">Arrivée à %1$s</string>
    <!-- Libellés des boutons de la pages d'accueil -->
    <string name="btn_velo">LE vélo</string>
    <string name="btn_velo_favori">Stations favorites</string>

    <string name="btn_carte">Plans du réseau</string>
    <string name="btn_planslignes">Contact</string>

    <string name="btn_bus">Horaires</string>
    <string name="btn_bus_favori">Arrêts Favoris</string>
    <string name="btn_bus_gps">Arrêts à proximité</string>
    <string name="btn_alert">État du trafic</string>
    <string name="btn_parking">Parcs relais</string>
    <string name="menu_tickets">Points de vente</string>
    <!-- Libellés de menus -->
    <string name="menu_selectDay">Choisir une date</string>
    <string name="menu_refresh">Rafraîchir</string>
    <string name="menu_apropos">À propos</string>
    <string name="menu_carte">Carte</string>
    <string name="menu_loadLines">Charger toutes les lignes</string>
    <string name="btn_itineraires">Itinéraires</string>
    <!-- Widget -->
    <string name="widget_choix">Choisissez de un à trois arrêts favoris.</string>
    <string name="widget11_choix">Choisissez un arrêt favori.</string>
    <!-- Génériques -->
    <string name="Terminer">Terminer</string>
    <string name="rechercher_itineraire">Rechercher l\'itinéraire</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="prochain">Prochain :</string>
    <string name="erreur_widgetBeforeLaunch">Vous n\'avez pas encore lancé l\'application, veuillez la lancer avant
        d\'essayer d\'ajouter des
        widgets.
    </string>
    <string name="erreur_widgetWithNoFavori">Vous n\'avez pas encore de favori, pour utiliser les widgets, il faut
        ajouter des favoris.
    </string>
    <string name="erreur_auMoinsUnFavori">Sélectionnez au moins un arrêt favori.</string>
    <string name="erreur_geocodage">Une erreur est survenue lors du géo-codage de l\'adresse, veuillez réessayer plus
        tard.
    </string>
    <string name="erreur_geocodage_quota">Une erreur est survenue lors du géo-codage de l\'adresse, le quota est dépassé
        (2500 par jours).
    </string>
    <string name="erreur_pasAdresseDepart">Aucune correspondance n\'a été trouvé pour l\'adresse de départ</string>
    <string name="erreur_pasAdresseArrivee">Aucune correspondance n\'a été trouvé pour l\'adresse de destination
    </string>
    <string name="erreur_gpsPasPret">La position gps n\'a pas encore été trouvée.</string>
    <string name="erreur_calculItineraires">Une erreur est survenue lors du calcul de l\'itinéraire, veuillez réessayer
        plus tard.
    </string>

    <string name="erreur_outOfBounds">L\'itinéraire demandé possède des adresses en déhors de la zone couverte.</string>
    <string name="erreur_noTransitTimes">Aucun bus trouvé pour l\'heure demandée.</string>
    <string name="erreur_pathNotFound">Aucun itinéraire trouvé.</string>

    <string name="nouvelleVersion">Nouvelle version disponible</string>
    <string name="versionDisponible">La version %1$s est disponible!</string>

    <string name="menu_share">Partager</string>
    <string name="shareText">LE MET\', l\'application Android pour vous faciliter les transports à Metz !
    </string>

    <string name="notifUpdateOn">Notification pour les mises à jour</string>
    <string name="preferences">Préférences</string>

    <string name="notifText">Ligne %1$s, arrêt %2$s arrive dans %3$s minutes</string>
    <string name="notifShortText">Ligne %1$s, arrêt %2$s</string>
    <string name="notifDescriptionText">Arrive dans %1$s minutes</string>
    <string name="listnotif_empty">Aucune notification trouvée.</string>
    <string name="notif">Notifications</string>
    <string name="supprimerNotif">Supprimer la notification</string>
    <string name="lineShortcut">Ligne de bus</string>
    <string name="lineName">Ligne %1$s</string>

    <string name="chooseTheme">Choisissez un thème</string>

    <string name="theme">Thème</string>
    <string name="debug">Debug</string>
    <string name="activateDebug">Activer les logs debugs.</string>

    <string name="erreurTimeoNotFound">Erreur : aucun arrêt trouvé avec le code %1$s</string>

    <string name="getRealTime">Récupération des horaires en cours.</string>

    <string name="diffSecondsToHigh">Vous avez plus de 30 secondes d\'écart avec l\'heure du réseau LE MET\' (%1$d secondes).</string>


    <string name="messageStarEnRetard">Les données des horaires ne sont plus valides, soit vous n\'avez pas mis à jour l\'application, soit le LE MET\' n\'a pas encore fournit les horaires, et je n\'ai donc pas pu les intégrer…</string>
</resources>